# game2023

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: quad_color.vs
src/: buffer.h  game.cpp  game.h  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  window.cpp
src/core/: game.cpp  game.h  main.cpp  stb_image.cpp  window.cpp  window.h
src/platform/metal/: metalbuffer.cpp  metalbuffer.h  metalrendererapi.cpp  metalshader.cpp  metalshader.h  metaltexture.cpp  metaltexture.h
src/renderer/: buffer.cpp  buffer.h  camera2d.cpp  camera2d.h  mesh.cpp  opengl.cpp  opengl.h  renderer.cpp  renderer.h  rendererapi.cpp  rendererapi.h  shader.cpp  shader.h  texture.cpp  texture.h
